# chip8

./: README.md  meson.build
inc/: analyser.h  chip8.h  decompile.h  emulator.h  run.h  util.h
src/: main.c  meson.build  util.c
src/decompile/: analyser.c  meson.build  printer.c
src/emu/: chip8.c  emulator.c  meson.build
src/programs/: compile.c  decompile.c  meson.build  run.c
